# polycubes

./: .gitignore  CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt  coord.h  polycube.h  polycubegen.cpp  polycubeio.h  polycubes2obj.cpp  polycubesearch.h  util.h
